SigmaCodebackup3rdSep/objects/Dimension_Tag__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Credit User Details</relationshipLabel>
        <relationshipName>Dimension_Tags</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Base_Credit_Limit__c</fullName>
        <label>Base Credit Limit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Due_Amount__c</fullName>
        <formula>Ordered_Amount__c - Paid_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Due Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Ordered_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Ordered Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Paid_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Paid Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Remaining_Credit_Limit__c</fullName>
        <formula>Base_Credit_Limit__c - Due_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Remaining Credit Limit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sigma_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sigma Order</label>
        <referenceTo>Sigma_Order__c</referenceTo>
        <relationshipLabel>Dimension Tags</relationshipLabel>
        <relationshipName>Dimension_Tags</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Stopped_Orders__c</fullName>
        <formula>Due_Amount__c &gt; Base_Credit_Limit__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Stopped Orders</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Work_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Work Order</label>
        <referenceTo>Work_Order__c</referenceTo>
        <relationshipLabel>Dimension Tags</relationshipLabel>
        <relationshipName>Dimension_Tags</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Credit User Details</label>
    <nameField>
        <displayFormat>CRD-{0000}</displayFormat>
        <label>Credit User Details</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Dimension Tags</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>